jus report labels added
Former-commit-id: 5113de21bb4c012d45fe6cd15cdee5b963270260

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -885,6 +885,10 @@ ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer verworfen)
 
 ItemList_of = von
 
+jus_out_html = Html
+
+jus_out_indesign = InDesign XML
+
 List_MedView = Mittlere Ansicht (alle Datens\u00E4tze)
 
 List_SelectItem = Selektieren
