--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -884,6 +884,10 @@ ItemList_filterAllExceptWithdrawn = All (except discarded)
 
 ItemList_of = of
 
+jus_out_html = Html
+
+jus_out_indesign = InDesign XML
+
 List_MedView = Medium View (all Items)
 
 List_SelectItem = Select Item
