--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -875,6 +875,10 @@ ItemList_filterAllExceptWithdrawn = Todos (excepto los retirados)
 
 ItemList_of = de
 
+jus_out_html = Html
+
+jus_out_indesign = InDesign XML
+
 List_MedView = Vista Media (todos los Items)
 
 List_SelectItem = Seleccionar Item
