--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -864,6 +864,10 @@ ItemList_filterAllExceptWithdrawn = \u5168\u3066\uFF08\u53D6\u308A\u4E0B\u3052\u
 
 ItemList_of = /
 
+jus_out_html = Html
+
+jus_out_indesign = InDesign XML
+
 List_MedView = \u30A2\u30A4\u30C6\u30E0\u306E\u8868\u793A\u9805\u76EE\u3092\u5897\u3084\u3059\uFF08\u8A73\u7D30\u4E00\u89A7\uFF09
 
 List_SelectItem = \u30A2\u30A4\u30C6\u30E0\u306E\u9078\u629E
