Breadcrumb fixes for PUBMAN-1902
Former-commit-id: 1f1141e969939acd8a9d05dc5b6e15705257e30d

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1290,6 +1290,12 @@ ViewItemFull_lblWithdrawn = Verworfen
 
 ViewItemFull_lblnameOfCollection = Name der Collection
 
+ViewItemFull_lblPdfWarning = Das Anzeigen von grof\u00DFen PDF-Dateien direkt im Browser kf\u00F6nnte Probleme verursachen. Im Falle von Fehlermeldungen wf\u00E4hlen Sie bitte die M\u00F6glichkeit zum Abspeichern der Datei!
+
+ViewItemFull_lblViewFulltext = \u00D4ffnen
+
+ViewItemFull_lblSaveFulltext = Speichern
+
 #
 #ViewItemLog
 #
