--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1292,6 +1292,12 @@ ViewItemFull_lblWithdrawn = Discarded
 
 ViewItemFull_lblnameOfCollection = Name of Collection
 
+ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
+
+ViewItemFull_lblViewFulltext = View
+
+ViewItemFull_lblSaveFulltext = Download
+
 #
 #ViewItemLog
 #
