--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -21,8 +21,8 @@
 #
 #
 # Copyright 2006-20117 Fachinformationszentrum Karlsruhe Gesellschaft
-# für wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur Förderung der Wissenschaft e.V.
+# fï¿½r wissenschaftlich-technische Information mbH and Max-Planck-
+# Gesellschaft zur Fï¿½rderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
 AcceptItemPage = Aceptar Item
@@ -1276,6 +1276,12 @@ ViewItemFull_lblWithdrawalDate = Fecha de retirada
 ViewItemFull_lblWithdrawn = Retirado
 
 ViewItemFull_lblnameOfCollection = Nombre de la Colecci\u00F3n
+
+ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
+
+ViewItemFull_lblViewFulltext = View
+
+ViewItemFull_lblSaveFulltext = Download
 
 #
 #ViewItemLog
