--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1266,6 +1266,12 @@ ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
+ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
+
+ViewItemFull_lblViewFulltext = View
+
+ViewItemFull_lblSaveFulltext = Download
+
 #
 #ViewItemLog
 #
