Advanced Search for Event Start Date and Event End Date
Former-commit-id: dc277d5a0f21a4b179e8a626e61770aa33abfa7a

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1882,6 +1882,10 @@ adv_search_lblChkType_accepted = akzeptiert
 
 adv_search_lblChkType_created = erstellt
 
+adv_search_lblChkType_event_start_date = Beginndatum
+
+adv_search_lblChkType_event_end_date = Enddatum
+
 adv_search_lblChkType_modified = modifiziert
 
 adv_search_lblChkType_publishedon = online publiziert
