--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1824,6 +1824,10 @@ adv_search_lblChkType_accepted = aceptado
 
 adv_search_lblChkType_created = creado
 
+adv_search_lblChkType_event_start_date = event start date
+
+adv_search_lblChkType_event_end_date = event end date
+
 adv_search_lblChkType_modified = modificado
 
 adv_search_lblChkType_publishedon = publicado en l\u00EDnea
