--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1881,6 +1881,10 @@ adv_search_lblChkType_accepted = accepted
 
 adv_search_lblChkType_created = created
 
+adv_search_lblChkType_event_start_date = event start date
+
+adv_search_lblChkType_event_end_date = event end date
+
 adv_search_lblChkType_modified = modified
 
 adv_search_lblChkType_publishedon = published online
