--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1855,6 +1855,10 @@ adv_search_lblChkType_accepted = \u53D7\u7406\u65E5
 
 adv_search_lblChkType_created = \u539F\u7A3F\u4F5C\u6210\u65E5
 
+adv_search_lblChkType_event_start_date = event start date
+
+adv_search_lblChkType_event_end_date = event end date
+
 adv_search_lblChkType_modified = \u6539\u8A02\u65E5
 
 adv_search_lblChkType_publishedon = \u30AA\u30F3\u30E9\u30A4\u30F3\u51FA\u7248\u65E5
