Fixes for PUBMAN-1918, PUBMAN-1645, PUBMAN-1913
Former-commit-id: d576334e90161cd5fa824f22e8afa8f2632721b3

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -885,10 +885,6 @@ ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer verworfen)
 
 ItemList_of = von
 
-jus_out_html = Html
-
-jus_out_indesign = InDesign XML
-
 List_MedView = Mittlere Ansicht (alle Datens\u00E4tze)
 
 List_SelectItem = Selektieren
@@ -1199,6 +1195,8 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = Seiten
 
+ViewItemFull_lblPdfWarning = Das Anzeigen von gro\u00DFen PDF-Dateien direkt im Browser k\u00F6nnte Probleme verursachen. Im Falle von Fehlermeldungen w\u00E4hlen Sie bitte die M\u00F6glichkeit zum Abspeichern der Datei!
+
 ViewItemFull_lblPublishingInfo = Ort, Verlag, Ausgabe
 
 ViewItemFull_lblRelation = Relation
@@ -1212,6 +1210,8 @@ ViewItemFull_lblRevisionMethod = Art der Begutachtung
 ViewItemFull_lblRollback = Version wiederherstellen
 
 ViewItemFull_lblRollbackConfirm = Sollen die bestehenden Daten wirklich mit dieser Version ersetzt werden?
+
+ViewItemFull_lblSaveFulltext = Speichern
 
 ViewItemFull_lblShowGroup = einblenden:
 
@@ -1280,6 +1280,8 @@ ViewItemFull_lblTitle = Titel
 
 ViewItemFull_lblVersion = Version
 
+ViewItemFull_lblViewFulltext = \u00D6ffnen
+
 ViewItemFull_lblVisibility = Visibility
 
 ViewItemFull_lblWithdrawalComment = Kommentar
@@ -1289,12 +1291,6 @@ ViewItemFull_lblWithdrawalDate = Datum des Verwerfens
 ViewItemFull_lblWithdrawn = Verworfen
 
 ViewItemFull_lblnameOfCollection = Name der Collection
-
-ViewItemFull_lblPdfWarning = Das Anzeigen von grof\u00DFen PDF-Dateien direkt im Browser kf\u00F6nnte Probleme verursachen. Im Falle von Fehlermeldungen wf\u00E4hlen Sie bitte die M\u00F6glichkeit zum Abspeichern der Datei!
-
-ViewItemFull_lblViewFulltext = \u00D4ffnen
-
-ViewItemFull_lblSaveFulltext = Speichern
 
 #
 #ViewItemLog
@@ -1882,9 +1878,9 @@ adv_search_lblChkType_accepted = akzeptiert
 
 adv_search_lblChkType_created = erstellt
 
-adv_search_lblChkType_event_start_date = Beginndatum
-
 adv_search_lblChkType_event_end_date = Enddatum
+
+adv_search_lblChkType_event_start_date = Beginndatum
 
 adv_search_lblChkType_modified = modifiziert
 
@@ -2354,6 +2350,10 @@ item_title = Titel
 item_title_alternative = Alternativer Titel
 
 item_total-number-of-pages = Gesamtseitenzahl
+
+jus_out_html = Html
+
+jus_out_indesign = InDesign XML
 
 lblSubject = Schlagwort
 
