Former-commit-id: 8fd725688a0372e232454362222e1dcd0edbc14a

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1878,9 +1878,9 @@ adv_search_lblChkType_accepted = akzeptiert
 
 adv_search_lblChkType_created = erstellt
 
-adv_search_lblChkType_event_end_date = Enddatum
+adv_search_lblChkType_event_start_date = Veranstaltungsbeginn
 
-adv_search_lblChkType_event_start_date = Beginndatum
+adv_search_lblChkType_event_end_date = Veranstaltungsende
 
 adv_search_lblChkType_modified = modifiziert
 
