--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1855,9 +1855,9 @@ adv_search_lblChkType_accepted = \u53D7\u7406\u65E5
 
 adv_search_lblChkType_created = \u539F\u7A3F\u4F5C\u6210\u65E5
 
-adv_search_lblChkType_event_start_date = event start date
+adv_search_lblChkType_event_start_date = start of event
 
-adv_search_lblChkType_event_end_date = event end date
+adv_search_lblChkType_event_end_date = end of event
 
 adv_search_lblChkType_modified = \u6539\u8A02\u65E5
 
