Fixed broken characters
Former-commit-id: 35040312408560d48b252671a033537132ea2a8f

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -827,6 +827,8 @@ Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit
 #
 Feed_Recent_Releases = Recent Releases
 
+FetchMetadataPage = Fetch/Import
+
 #
 # Orientierungstexts (Sub-Header)
 #
@@ -883,10 +885,6 @@ ItemList_filterAllExceptPendingWithdrawn = All (except pending and discarded)
 ItemList_filterAllExceptWithdrawn = All (except discarded)
 
 ItemList_of = of
-
-jus_out_html = Html
-
-jus_out_indesign = InDesign XML
 
 List_MedView = Medium View (all Items)
 
@@ -1198,6 +1196,8 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = Pages
 
+ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
+
 ViewItemFull_lblPublishingInfo = Publishing info
 
 ViewItemFull_lblRelation = Relation
@@ -1211,6 +1211,8 @@ ViewItemFull_lblRevisionMethod = Rev. Method
 ViewItemFull_lblRollback = Rollback to this version
 
 ViewItemFull_lblRollbackConfirm = Do you really want to replace the existing data with this version?
+
+ViewItemFull_lblSaveFulltext = Download
 
 ViewItemFull_lblShowGroup = show
 
@@ -1282,6 +1284,8 @@ ViewItemFull_lblTitle = Title
 
 ViewItemFull_lblVersion = Version
 
+ViewItemFull_lblViewFulltext = View
+
 ViewItemFull_lblVisibility = Visibility
 
 ViewItemFull_lblWithdrawalComment = Comment
@@ -1291,12 +1295,6 @@ ViewItemFull_lblWithdrawalDate = Date of Discard
 ViewItemFull_lblWithdrawn = Discarded
 
 ViewItemFull_lblnameOfCollection = Name of Collection
-
-ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
-
-ViewItemFull_lblViewFulltext = View
-
-ViewItemFull_lblSaveFulltext = Download
 
 #
 #ViewItemLog
@@ -1881,9 +1879,9 @@ adv_search_lblChkType_accepted = accepted
 
 adv_search_lblChkType_created = created
 
-adv_search_lblChkType_event_start_date = start of event
-
 adv_search_lblChkType_event_end_date = end of event
+
+adv_search_lblChkType_event_start_date = start of event
 
 adv_search_lblChkType_modified = modified
 
@@ -2356,6 +2354,10 @@ item_title = Title
 item_title_alternative = Alternative Title
 
 item_total-number-of-pages = Total no. of pages
+
+jus_out_html = Html
+
+jus_out_indesign = InDesign XML
 
 lblSubject = Subject
 
