--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -807,6 +807,8 @@ Feed_OrgUnit_Recent_Releases = \u7D44\u7E54\u306E\u6700\u65B0\u516C\u958B\u30A2\
 #
 Feed_Recent_Releases = \u6700\u65B0\u516C\u958B\u30A2\u30A4\u30C6\u30E0
 
+FetchMetadataPage = \u30E1\u30BF\u30C7\u30FC\u30BF\u306E\u53D6\u5F97
+
 #
 # Orientierungstexts (Sub-Header)
 #
@@ -863,10 +865,6 @@ ItemList_filterAllExceptPendingWithdrawn = \u5168\u30A2\u30A4\u30C6\u30E0\uFF08\
 ItemList_filterAllExceptWithdrawn = \u5168\u3066\uFF08\u53D6\u308A\u4E0B\u3052\u5206\u306F\u9664\u304F\uFF09
 
 ItemList_of = /
-
-jus_out_html = Html
-
-jus_out_indesign = InDesign XML
 
 List_MedView = \u30A2\u30A4\u30C6\u30E0\u306E\u8868\u793A\u9805\u76EE\u3092\u5897\u3084\u3059\uFF08\u8A73\u7D30\u4E00\u89A7\uFF09
 
@@ -1175,6 +1173,8 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = \u30DA\u30FC\u30B8
 
+ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
+
 ViewItemFull_lblPublishingInfo = \u51FA\u7248\u60C5\u5831
 
 ViewItemFull_lblRelation = Relation
@@ -1188,6 +1188,8 @@ ViewItemFull_lblRevisionMethod = \u67FB\u8AAD
 ViewItemFull_lblRollback = \u3053\u306E\u7248\u306B\u623B\u3059
 
 ViewItemFull_lblRollbackConfirm = \u73FE\u5728\u306E\u6700\u65B0\u30C7\u30FC\u30BF\u3092\u3053\u306E\u7248\u306E\u60C5\u5831\u3067\u7F6E\u304D\u63DB\u3048\u3066\u826F\u3044\u3067\u3059\u304B?
+
+ViewItemFull_lblSaveFulltext = Download
 
 ViewItemFull_lblShowGroup = \u8868\u793A:
 
@@ -1256,6 +1258,8 @@ ViewItemFull_lblTitle = \u30BF\u30A4\u30C8\u30EB
 
 ViewItemFull_lblVersion = \u30D0\u30FC\u30B8\u30E7\u30F3
 
+ViewItemFull_lblViewFulltext = View
+
 ViewItemFull_lblVisibility = \ 
 
 ViewItemFull_lblWithdrawalComment = \u30B3\u30E1\u30F3\u30C8
@@ -1265,12 +1269,6 @@ ViewItemFull_lblWithdrawalDate = \u53D6\u308A\u4E0B\u3052\u65E5
 ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
-
-ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
-
-ViewItemFull_lblViewFulltext = View
-
-ViewItemFull_lblSaveFulltext = Download
 
 #
 #ViewItemLog
@@ -1855,9 +1853,9 @@ adv_search_lblChkType_accepted = \u53D7\u7406\u65E5
 
 adv_search_lblChkType_created = \u539F\u7A3F\u4F5C\u6210\u65E5
 
-adv_search_lblChkType_event_start_date = start of event
-
 adv_search_lblChkType_event_end_date = end of event
+
+adv_search_lblChkType_event_start_date = start of event
 
 adv_search_lblChkType_modified = \u6539\u8A02\u65E5
 
@@ -2321,6 +2319,10 @@ item_title = \u30BF\u30A4\u30C8\u30EB
 item_title_alternative = \u305D\u306E\u4ED6\u306E\u30BF\u30A4\u30C8\u30EB\uFF08\u526F\u984C\u3001\u7FFB\u8A33\u306A\u3069\uFF09
 
 item_total-number-of-pages = \u7DCF\u30DA\u30FC\u30B8\u6570
+
+jus_out_html = Html
+
+jus_out_indesign = InDesign XML
 
 lblSubject = \u4E3B\u984C
 
