add Japanese labels on workspaces page.
Former-commit-id: 9a9b1c3116cfee1708e4b33f02bca3f601d38237

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -143,7 +143,7 @@ CartItemsPage = \u4E00\u6642\u4FDD\u5B58
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Choose Workspace
+ChooseWorkspacePage = \u7BA1\u7406\u753B\u9762\u306E\u9078\u629E
 
 CollaboratorPage = Collaborator
 
@@ -1620,7 +1620,7 @@ WithdrawItem_lnkPublication = \u30A2\u30A4\u30C6\u30E0
 
 WithdrawItem_lnkWithdraw = \u53D6\u308A\u4E0B\u3052
 
-WorkspacesPage = Workspaces
+WorkspacesPage = \u7BA1\u7406\u753B\u9762
 
 Year = \u520A\u884C\u5E74
 
@@ -1735,7 +1735,7 @@ adv_search_filePublicAvailable = \u516C\u958B
 
 adv_search_fileRestrictedAccess = \u5236\u9650\u4ED8\u304D
 
-adv_search_lbHeaderCollection = Collection
+adv_search_lbHeaderCollection = \u767B\u9332\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 adv_search_lbHeaderContentDetails = \u305D\u306E\u4ED6\u8A73\u7D30
 
@@ -1950,15 +1950,15 @@ chooseWorkspace_descYearbookModeratorWorkspace = Description Yearbook Moderator 
 
 chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Japanese.
 
-chooseWorkspace_lnkQAWorkspace = QA Workspace
+chooseWorkspace_lnkQAWorkspace = \u767B\u9332\u30A2\u30A4\u30C6\u30E0\u7BA1\u7406\u753B\u9762
 
 chooseWorkspace_lnkReportWorkspace = Report Workspace
 
 chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
 
-chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
+chooseWorkspace_optMenuImportWorkspace = \u4E00\u62EC\u767B\u9332\u7BA1\u7406\u753B\u9762
 
-chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
+chooseWorkspace_optMenuQAWorkspace = \u767B\u9332\u30A2\u30A4\u30C6\u30E0\u7BA1\u7406\u753B\u9762
 
 chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
 
@@ -2380,7 +2380,7 @@ mainMenu_lnkHome = \u30DB\u30FC\u30E0
 
 mainMenu_lnkPolicy = \u30DD\u30EA\u30B7\u30FC/\u514D\u8CAC\u4E8B\u9805
 
-mainMenu_lnkWorkspaces = WORKSPACES 
+mainMenu_lnkWorkspaces = \u7BA1\u7406\u753B\u9762 
 
 mpipksDesc = MPI PKS\u5206\u985E\u8868 (MPI PKS Classification)
 
