--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -105,36 +105,36 @@ AudiencePage_numberOf = insgesamt
 
 AudiencePage_numberOfFiles = Dateien:
 
-Basket_lblRemoveSelected = AUS ABLAGE ENTFERNEN
+Basket_lblRemoveSelected = ENTFERNEN
 
 #
 # Bread Crumb Navigation
 #
 BreadCrumb_info = Aktionen:
 
-BrowseByChooseInitial = W\u00E4hle Anfangsbuchstabe
+BrowseByChooseInitial = Anfangsbuchstabe
 
-BrowseByChooseYear = W\u00E4hle Jahr
+BrowseByChooseYear = Jahr
 
 BrowseByCreator = Personen
 
-BrowseByCreatorDesc = Browsen nach Personennamen und Zugriff auf die entsprechenden Datens\u00E4tze.
+BrowseByCreatorDesc = Personennamen und Zugriff auf die entsprechenden Datens\u00E4tze.
 
-BrowseByInitial = Anfangsbuchstabe:
+BrowseByInitial = Anfangsbuchstabe
 
 BrowseByOrg = Organisationen
 
-BrowseByOrgDesc = Browsen nach Organisationseinheiten und Zugriff auf die entsprechenden Datens\u00E4tze.
+BrowseByOrgDesc = Organisationseinheiten und Zugriff auf die entsprechenden Datens\u00E4tze.
 
 BrowseByPage = Browse
 
-BrowseBySelect = W\u00E4hle Browse By
+BrowseBySelect = Browse By
 
 BrowseBySubject = Schlagw\u00F6rter
 
-BrowseByYear = Browse By Jahr
+BrowseByYear = Jahr
 
-BrowseByYearDesc = Browsen nach Jahresangaben und Zugriff auf die entsprechenden Datens\u00E4tze.
+BrowseByYearDesc = Jahresangaben und Zugriff auf die entsprechenden Datens\u00E4tze.
 
 #
 #CartItemsPage
@@ -144,7 +144,7 @@ CartItemsPage = Ablage
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Arbeitsbereich ausw\u00E4hlen
+ChooseWorkspacePage = Arbeitsbereiche
 
 CollaboratorPage = Collaborator
 
@@ -152,7 +152,7 @@ CollaboratorPage_group = Gruppe
 
 CollaboratorPage_modify = \u00C4nderungen erlauben
 
-CreateItemPage = Collection ausw\u00E4hlen
+CreateItemPage = Collections
 
 CreateNewRevision_ChooseCollection = Bitte w\u00E4hlen Sie eine Collection aus, indem Sie auf den Namen selbiger klicken.
 
@@ -864,7 +864,7 @@ ItemListSortingOrder_SORTORDER_DESCENDING = absteigend
 
 ItemList_Details = Listendetails
 
-ItemList_ObjectsPerPage = Treffer je Seite
+ItemList_ObjectsPerPage = Treffer
 
 ItemList_Results = Ergebnisse
 
@@ -873,7 +873,7 @@ ItemList_Show = Zeige
 #
 # ItemList
 #
-ItemList_SortBy = Sortierung nach
+ItemList_SortBy = Nach
 
 ItemList_SortOrderAscending = aufsteigend
 
@@ -887,13 +887,13 @@ ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer verworfen)
 
 ItemList_of = von
 
-List_MedView = Mittlere Ansicht (alle Datens\u00E4tze)
+List_MedView = Mehr (alle)
 
 List_SelectItem = Selektieren
 
 List_ShortView = Kurzansicht (alle Datens\u00E4tze)
 
-List_lblAddToBasket = ZUR ABLAGE HINZUF\u00DCGEN
+List_lblAddToBasket = IN ABLAGE
 
 List_lblBibList = Bibliographisch
 
@@ -905,13 +905,13 @@ List_lblFilterOptions = FILTER
 
 List_lblGo = Los
 
-List_lblGoToPage = Gehe zu Seite
+List_lblGoToPage = Seite
 
-List_lblGridList = Tabellarisch
+List_lblGridList = Tabelle
 
 List_lblPage = Seite
 
-List_lblRevision = Revisionen:
+List_lblRevision = Revisionen
 
 List_lblSelectItem = Ausw\u00E4hlen
 
@@ -933,11 +933,11 @@ List_lkNext = N\u00E4chste
 
 List_lkNone = Keine
 
-List_lkPrevious = Vorhergehende
+List_lkPrevious = Zur\u00FCck
 
 List_lkShow = Anschauen
 
-LocalTagsPage = Lokale Tags bearbeiten
+LocalTagsPage = Tags bearbeiten
 
 LoginErrorPage = Login Status
 
@@ -947,7 +947,7 @@ MultipleImport_configuration = Import Konfiguration
 
 NewMultipleImport = Massenimport
 
-NoSearchResultListPage = keine Treffer
+NoSearchResultListPage = Keine Treffer
 
 NoSearchResultsPage = Keine Treffer
 
@@ -1005,13 +1005,13 @@ SearchResultList_lblNoHits = 0 Treffer
 #
 # SearchResultList
 #
-SearchResultList_lblSortBy = Sortieren nach
+SearchResultList_lblSortBy = Nach
 
 SearchResultList_lblSortOrderAsc = aufsteigend
 
 SearchResultList_lblSortOrderDesc = absteigend
 
-SearchResultList_lblSortedBy = sortiert nach
+SearchResultList_lblSortedBy = nach
 
 Search_lblShowHide = einblenden/ausblenden
 
@@ -1059,17 +1059,17 @@ ViewItemFull_btnFileSection = Dateien
 
 ViewItemFull_btnItemRevisions = Revisionen
 
-ViewItemFull_btnItemStatistics = Statistiken
+ViewItemFull_btnItemStatistics = Statistik
 
-ViewItemFull_btnItemVersions = Freigabegeschichte
+ViewItemFull_btnItemVersions = Historie
 
-ViewItemFull_btnItemView = Ansehen
+ViewItemFull_btnItemView = Details
 
 ViewItemFull_lblAbstract = Zusammenfassung
 
 ViewItemFull_lblAbstractLanguage = Sprache des Abstracts
 
-ViewItemFull_lblAddToBasket = Zur Ablage hinzuf\u00FCgen
+ViewItemFull_lblAddToBasket = In Ablage
 
 ViewItemFull_lblAffiliations = Affiliations
 
@@ -1079,9 +1079,9 @@ ViewItemFull_lblAlternativeTitle = Alternativer Titel
 
 ViewItemFull_lblBasic = Basisdaten
 
-ViewItemFull_lblCiteItemAs = Lesezeichen zu diesem Datensatz setzen
+ViewItemFull_lblCiteItemAs = Lesezeichen setzen
 
-ViewItemFull_lblCreateItemFromTemplate = Als Vorlage verwenden
+ViewItemFull_lblCreateItemFromTemplate = Als Vorlage
 
 ViewItemFull_lblCreator = Urheber
 
@@ -1095,7 +1095,7 @@ ViewItemFull_lblDateCreated = Erstellt,
 
 ViewItemFull_lblDateModified = Ge\u00E4ndert, 
 
-ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht, 
+ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht,
 
 ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht, 
 
@@ -1127,7 +1127,7 @@ ViewItemFull_lblFileFullTxtSearchHits = Suchtreffer im Volltext
 
 ViewItemFull_lblFileLicense = Lizenz
 
-ViewItemFull_lblFileLicenseShow = Lizenz in neuem Fenster anzeigen.
+ViewItemFull_lblFileLicenseShow = Lizenz in neuem Fenster.
 
 ViewItemFull_lblFileMimeTypeSize = MIME-Typ / Gr\u00F6\u00DFe
 
@@ -1147,7 +1147,7 @@ ViewItemFull_lblGenre = Genre
 
 ViewItemFull_lblHasRevision = Revision
 
-ViewItemFull_lblHideGroup = ausblenden:
+ViewItemFull_lblHideGroup = ausblenden
 
 ViewItemFull_lblIdentifiers = Identifikatoren
 
@@ -1215,7 +1215,7 @@ ViewItemFull_lblRollbackConfirm = Sollen die bestehenden Daten wirklich mit dies
 
 ViewItemFull_lblSaveFulltext = Speichern
 
-ViewItemFull_lblShowGroup = einblenden:
+ViewItemFull_lblShowGroup = einblenden
 
 ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
 
@@ -1746,7 +1746,7 @@ adv_search_btRemove = Formular l\u00F6schen
 
 adv_search_btShowMore = mehr..
 
-adv_search_btStart = Suche starten
+adv_search_btStart = Suchen
 
 adv_search_fileComponentAvailability = Dateien & ext. Ref.
 
@@ -2213,7 +2213,7 @@ event_title_alternative = Alternativer Titel
 #
 export_btDisplay = Anzeigen
 
-export_btDownload = Runterladen
+export_btDownload = Download
 
 export_btEMail = E-Mail 
 
@@ -2395,9 +2395,9 @@ mainMenu_lblCart = ABLAGE
 
 mainMenu_lblMyWorkspace = Deposit
 
-mainMenu_lblQA = Qualit\u00E4ts- sicherung
+mainMenu_lblQA = Qualit\u00E4tssicherung
 
-mainMenu_lblSubmission = DATENEINGABE
+mainMenu_lblSubmission = EINGABE
 
 mainMenu_lnkBlog = Blog
 
@@ -2414,7 +2414,7 @@ mainMenu_lnkHelp = Hilfe
 #
 mainMenu_lnkHome = START
 
-mainMenu_lnkPolicy = Leitlinien&Impressum
+mainMenu_lnkPolicy = Leitfaden
 
 mainMenu_lnkWorkspaces = ARBEITSBEREICHE
 
@@ -2480,7 +2480,7 @@ qaws_lblMultipleImportTags = Import Name
 
 qaws_lblOrgUnitSelection = Organisation
 
-quick_search_btnStart = Los
+quick_search_btnStart = Suchen
 
 remove = Entfernen
 
@@ -2491,16 +2491,16 @@ restrictive_message = Restriktiv:
 
 save = Speichern
 
-search_btSearch = Los
+search_btSearch = Suche
 
-search_lblAdvancedSearch = Detailsuche
+search_lblAdvancedSearch = Erweitert
 
 search_lblAdvancedSearch_noresults = Erweiterte Suche
 
 #
 # Search
 #
-search_lblIncludeFiles = Volltexte einbinden
+search_lblIncludeFiles = Volltexte
 
 search_lblSearch = Suche nach freigegebenen Datens\u00E4tzen
 
@@ -2586,7 +2586,7 @@ submission_lblDescription = Beschreibung
 
 submission_lblMoreDetails = (mehr)
 
-submission_lblSubmissionStart = Eingabemethode
+submission_lblSubmissionStart = Methode
 
 submission_lnkEasySubmission = Einfach
 
@@ -2597,8 +2597,6 @@ submission_lnkImportWorkspace = Import Bereich
 submission_lnkMultipleImport = Massenimport
 
 submission_lnkNewSubmission = Detailliert
-
-test = =
 
 #
 # Title
