--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -104,36 +104,36 @@ AudiencePage_numberOf = total
 
 AudiencePage_numberOfFiles = Files:
 
-Basket_lblRemoveSelected = REMOVE FROM BASKET
+Basket_lblRemoveSelected = REMOVE
 
 #
 # Bread Crumb Navigation
 #
 BreadCrumb_info = Actions:
 
-BrowseByChooseInitial = Choose Initial
+BrowseByChooseInitial = Initial
 
-BrowseByChooseYear = Choose Year
+BrowseByChooseYear = Year
 
 BrowseByCreator = Persons
 
-BrowseByCreatorDesc = Browse by person names and view the corresponding items.
+BrowseByCreatorDesc = Person names and view the corresponding items.
 
-BrowseByInitial = Initial:
+BrowseByInitial = Initial
 
 BrowseByOrg = Organizations
 
-BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
+BrowseByOrgDesc = Organizational unit names and view the corresponding items.
 
 BrowseByPage = Browse
 
-BrowseBySelect = Choose Browse By
+BrowseBySelect = Browse By
 
 BrowseBySubject = Subjects
 
-BrowseByYear = Browse By Year
+BrowseByYear = Year
 
-BrowseByYearDesc = Browse by year and view the corresponding items.
+BrowseByYearDesc = Year and view the corresponding items.
 
 #
 #CartItemsPage
@@ -143,7 +143,7 @@ CartItemsPage = Basket
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Choose Workspace
+ChooseWorkspacePage = Workspaces
 
 CollaboratorPage = Collaborator
 
@@ -151,7 +151,7 @@ CollaboratorPage_group = Group
 
 CollaboratorPage_modify = enable modification
 
-CreateItemPage = Choose Collection 
+CreateItemPage = Collections 
 
 CreateNewRevision_ChooseCollection = Please choose a collection by clicking on the name of the collection.
 
@@ -863,7 +863,7 @@ ItemListSortingOrder_SORTORDER_DESCENDING = descending
 
 ItemList_Details = List Details
 
-ItemList_ObjectsPerPage = items per page
+ItemList_ObjectsPerPage = items
 
 ItemList_Results = Results
 
@@ -872,7 +872,7 @@ ItemList_Show = Showing
 #
 # ItemList
 #
-ItemList_SortBy = Sort by
+ItemList_SortBy = By
 
 ItemList_SortOrderAscending = ascending
 
@@ -886,13 +886,13 @@ ItemList_filterAllExceptWithdrawn = All (except discarded)
 
 ItemList_of = of
 
-List_MedView = Medium View (all Items)
+List_MedView = More (all)
 
 List_SelectItem = Select Item
 
 List_ShortView = Short View (All Items)
 
-List_lblAddToBasket = ADD SELECTED TO BASKET
+List_lblAddToBasket = ADD TO BASKET
 
 List_lblBibList = Bibliographic List
 
@@ -904,13 +904,13 @@ List_lblFilterOptions = FILTER
 
 List_lblGo = Go
 
-List_lblGoToPage = Go to page
+List_lblGoToPage = Page
 
 List_lblGridList = Table View
 
 List_lblPage = Page
 
-List_lblRevision = Revisions:
+List_lblRevision = Revisions
 
 List_lblSelectItem = Select Item
 
@@ -936,7 +936,7 @@ List_lkPrevious = Previous
 
 List_lkShow = Show
 
-LocalTagsPage = Edit Local Tags
+LocalTagsPage = Edit Tags
 
 LoginErrorPage = Login state
 
@@ -1004,13 +1004,13 @@ SearchResultList_lblNoHits = 0 Hits
 #
 # SearchResultList
 #
-SearchResultList_lblSortBy = Sort by
+SearchResultList_lblSortBy = By
 
 SearchResultList_lblSortOrderAsc = ascending
 
 SearchResultList_lblSortOrderDesc = descending
 
-SearchResultList_lblSortedBy = sorted by
+SearchResultList_lblSortedBy = by
 
 Search_lblShowHide = show/hide
 
@@ -1060,9 +1060,9 @@ ViewItemFull_btnItemRevisions = Revisions
 
 ViewItemFull_btnItemStatistics = Statistics
 
-ViewItemFull_btnItemVersions = Release History
+ViewItemFull_btnItemVersions = History
 
-ViewItemFull_btnItemView = View
+ViewItemFull_btnItemView = Details
 
 ViewItemFull_lblAbstract = Abstract
 
@@ -1080,7 +1080,7 @@ ViewItemFull_lblBasic = Basic
 
 ViewItemFull_lblCiteItemAs = Bookmark this item
 
-ViewItemFull_lblCreateItemFromTemplate = Use item as template
+ViewItemFull_lblCreateItemFromTemplate = As template
 
 ViewItemFull_lblCreator = Creator
 
@@ -1126,7 +1126,7 @@ ViewItemFull_lblFileFullTxtSearchHits = Fulltext Search Hits
 
 ViewItemFull_lblFileLicense = License
 
-ViewItemFull_lblFileLicenseShow = Open license in a new window.
+ViewItemFull_lblFileLicenseShow = Open license in new window.
 
 ViewItemFull_lblFileMimeTypeSize = MIME-Type / Size
 
@@ -1745,7 +1745,7 @@ adv_search_btRemove = Remove Form
 
 adv_search_btShowMore = more..
 
-adv_search_btStart = Start Search
+adv_search_btStart = Search
 
 adv_search_fileComponentAvailability = Files & Locators
 
@@ -2482,7 +2482,7 @@ qaws_lblMultipleImportTags = Import Name
 
 qaws_lblOrgUnitSelection = Organizational Unit
 
-quick_search_btnStart = Go
+quick_search_btnStart = Search
 
 remove = Remove
 
@@ -2493,9 +2493,9 @@ restrictive_message = Restrictive:
 
 save = Save
 
-search_btSearch = Go
+search_btSearch = Search
 
-search_lblAdvancedSearch = Advanced Search
+search_lblAdvancedSearch = Advanced
 
 search_lblAdvancedSearch_noresults = Advanced Search
 
@@ -2588,7 +2588,7 @@ submission_lblDescription = Description
 
 submission_lblMoreDetails = (more)
 
-submission_lblSubmissionStart = Submission Method
+submission_lblSubmissionStart = Method
 
 submission_lnkEasySubmission = Easy
 
