--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -119,7 +119,7 @@ BrowseByCreator = Autores
 
 BrowseByCreatorDesc = B\u00FAsqueda por el nombre del autor.
 
-BrowseByInitial = Letra inicial: 
+BrowseByInitial = Letra inicial
 
 BrowseByOrg = Organizaciones 
 
@@ -143,7 +143,7 @@ CartItemsPage = Cesta
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Elegir Workspace
+ChooseWorkspacePage = Workspaces
 
 CollaboratorPage = Colaborador 
 
@@ -895,13 +895,13 @@ List_lblFilterOptions = FILTRAR
 
 List_lblGo = Ir
 
-List_lblGoToPage = Ir a p\u00E1gina
+List_lblGoToPage = P\u00E1gina
 
 List_lblGridList = Vista Tabla
 
 List_lblPage = P\u00E1gina
 
-List_lblRevision = Revisiones:
+List_lblRevision = Revisiones
 
 List_lblSelectItem = Seleccionar Item
 
@@ -927,7 +927,7 @@ List_lkPrevious = Anterior
 
 List_lkShow = Mostrar
 
-LocalTagsPage = Editar Etiquetas Locales
+LocalTagsPage = Editar Etiquetas
 
 LoginErrorPage = Estado de Login 
 
@@ -998,7 +998,7 @@ SearchResultList_lblSortOrderAsc = ascendente
 
 SearchResultList_lblSortOrderDesc = descendente
 
-SearchResultList_lblSortedBy = ordenados por
+SearchResultList_lblSortedBy = por
 
 Search_lblShowHide = mostrar/ocultar
 
