Label for select box
Former-commit-id: 3f132b7caf91f32ff9ea3c3ee6975453edd9eff4

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -937,6 +937,8 @@ List_lkPrevious = Zur\u00FCck
 
 List_lkShow = Anschauen
 
+List_lkToggleAll = Auswahl umkehren\u0009
+
 LocalTagsPage = Tags bearbeiten
 
 LoginErrorPage = Login Status
