--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -936,6 +936,8 @@ List_lkPrevious = Previous
 
 List_lkShow = Show
 
+List_lkToggleAll = Toggle all
+
 LocalTagsPage = Edit Tags
 
 LoginErrorPage = Login state
