--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -254,9 +254,9 @@ ENUM_LANGUAGE_DE = Deutsch
 
 ENUM_LANGUAGE_EN = Englisch
 
-ENUM_LANGUAGE_JA = Japanisch
-
 ENUM_LANGUAGE_ES = Spanisch
+
+ENUM_LANGUAGE_JA = Japanisch
 
 ENUM_LOGICOPTIONS_LOGIC_AND = UND
 
@@ -748,13 +748,13 @@ Login_changeLanguage = Sprache \u00E4ndern
 # Login
 Login_login_logout = Login/Logout
 
+MainMenu_ImportWorkspacesPage = Gehe zu Import Seite.
+
 MainMenu_WorkspacesPage = Gehe zu Arbeitsplatz Seite.
 
 MainMenu_cartItemsPage = Gehe zur Ablage.
 
 MainMenu_depWorkspace = Gehe zum Depositor Arbeitsplatz.
-
-MainMenu_ImportWorkspacesPage = Gehe zu Import Seite.
 
 # Main Menu
 MainMenu_myItems = Gehe zum Depositor Arbeitsplatz.
@@ -1598,6 +1598,14 @@ all = alle auw\u00E4hlen
 
 cancel = Abbrechen
 
+chooseWorkspace_ImportWorkspace = Gehe zur Import Bereich Seite.
+
+chooseWorkspace_QAWorkspace = Gehe zur QA Arbeitsplatz Seite.
+
+chooseWorkspace_ReportWorkspace = Gehe zur T\u00E4tigkeitsbericht Arbeitsplatz Seite.
+
+chooseWorkspace_YearbookWorkspace = Gehe zur Jahrbuch Arbeitsplatz Seite.
+
 confirm = Best\u00E4tigen
 
 confirmSelection = Auswahl best\u00E4tigen
@@ -1818,6 +1826,8 @@ info_lblMessageHeader = Systemnachrichten:
 
 informative_message = Informativ:
 
+list_allCheckBox = Auswahloptionen\u0009
+
 list_ascending = aufsteigend
 
 list_btChangeState = Status \u00E4ndern
@@ -1860,6 +1870,8 @@ login_btLogout = Ausloggen
 mainMenu_lblBrowse = Navigieren
 
 mainMenu_lblMy = Dateneingabe
+
+mainMenu_lblMyWorkspace = Deposit
 
 mainMenu_lblQA = Qualit\u00E4ts- sicherung
 
@@ -2030,11 +2042,3 @@ viewItem_download = Datei herunterladen
 warning_lblMessageHeader = Systemnachrichten and Warnungen:
 
 yes = Ja
-
-chooseWorkspace_ImportWorkspace = Gehe zur Import Bereich Seite.
-
-chooseWorkspace_QAWorkspace = Gehe zur QA Arbeitsplatz Seite.
-
-chooseWorkspace_ReportWorkspace = Gehe zur T\u00E4tigkeitsbericht Arbeitsplatz Seite.
-
-chooseWorkspace_YearbookWorkspace = Gehe zur Jahrbuch Arbeitsplatz Seite.
