--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -1598,6 +1598,14 @@ all = Select all
 
 cancel = Cancel
 
+chooseWorkspace_ImportWorkspace = Go to Import Workspace Page.
+
+chooseWorkspace_QAWorkspace = Go to QA Workspace Page.
+
+chooseWorkspace_ReportWorkspace = Go to Report Workspace Page.
+
+chooseWorkspace_YearbookWorkspace = Go to Yearbook Workspace Page.
+
 confirm = Confirm
 
 confirmSelection = Confirm Selection
@@ -1821,6 +1829,8 @@ info_lblMessageHeader = System Messages:
 
 informative_message = Informative:
 
+list_allCheckBox = Select Options
+
 list_ascending = ascending
 
 list_btChangeState = change item state
@@ -2035,12 +2045,3 @@ viewItem_download = Download File
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
-
-chooseWorkspace_ImportWorkspace = Go to Import Workspace Page.
-
-chooseWorkspace_QAWorkspace = Go to QA Workspace Page.
-
-chooseWorkspace_ReportWorkspace = Go to Report Workspace Page.
-
-chooseWorkspace_YearbookWorkspace = Go to Yearbook Workspace Page.
-
