--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -254,9 +254,9 @@ ENUM_LANGUAGE_DE = German
 
 ENUM_LANGUAGE_EN = English
 
-ENUM_LANGUAGE_JA = Japanese
-
 ENUM_LANGUAGE_ES = Spanish
+
+ENUM_LANGUAGE_JA = Japanese
 
 ENUM_LOGICOPTIONS_LOGIC_AND = AND
 
@@ -1598,6 +1598,14 @@ all = Select all
 
 cancel = Cancel
 
+chooseWorkspace_ImportWorkspace = Go to Import Workspace Page.
+
+chooseWorkspace_QAWorkspace = \u7BA1\u7406\u753B\u9762\u306B\u884C\u304F
+
+chooseWorkspace_ReportWorkspace = Go to Report Workspace Page.
+
+chooseWorkspace_YearbookWorkspace = Go to Yearbook Workspace Page.
+
 confirm = Confirm
 
 confirmSelection = Confirm Selection
@@ -1821,6 +1829,8 @@ info_lblMessageHeader = System Messages:
 
 informative_message = Informative:
 
+list_allCheckBox = Select Options
+
 list_ascending = ascending
 
 list_btChangeState = change item state
@@ -2035,12 +2045,3 @@ viewItem_download = \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9:
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
-
-chooseWorkspace_ImportWorkspace = Go to Import Workspace Page.
-
-chooseWorkspace_QAWorkspace =  \u7BA1\u7406\u753B\u9762\u306B\u884C\u304F
-
-chooseWorkspace_ReportWorkspace = Go to Report Workspace Page.
-
-chooseWorkspace_YearbookWorkspace = Go to Yearbook Workspace Page.
-
